// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review renders without crashing 1`] = `
<div>
  <img
    src="https://s3.amazonaws.com/uifaces/faces/twitter/maxlinderman/128.jpg"
  />
  <div>
    jinjing
  </div>
  <div />
  <div>
    it is good
  </div>
</div>
`;

exports[`Review_ReadMore Render ReadMore component when comments has over 30 words 1`] = `
<div>
  <img
    src="https://s3.amazonaws.com/uifaces/faces/twitter/maxlinderman/128.jpg"
  />
  <div>
    jinjing
  </div>
  <div />
  <ReadMore
    comments="Necessitatibus dolorem eius nemo odit aut quisquam natus. Quam ullam vitae fugit amet. Aut sequi repudiandae voluptas. Ducimus velit sequi iusto nemo ad accusantium et molestias. Atque quibusdam iste doloremque ea. In sint sed voluptatem unde fghj rdftyg drtf ghj ftyg hjk rytu"
  />
</div>
`;
